Update variables include template and all related files to use new variables data

--- a/docs/documentation/components/message.html
+++ b/docs/documentation/components/message.html
@@ -2,31 +2,6 @@
 layout: documentation
 doc-tab: components
 doc-subtab: message
-variables:
-- name: $message-background-color
-  value: $background
-- name: $message-radius
-  value: $radius
-- name: $message-header-background-color
-  value: $text
-- name: $message-header-color
-  value: $text-invert
-- name: $message-header-padding
-  value: 0.5em 0.75em
-- name: $message-header-radius
-  value: $radius
-- name: $message-body-border
-  value: 1px solid $border
-- name: $message-body-color
-  value: $text
-- name: $message-body-padding
-  value: 1em 1.25em
-- name: $message-body-radius
-  value: $radius
-- name: $message-body-pre-background-color
-  value: $white
-- name: $message-body-pre-code-background-color
-  value: transparent
 ---
 
 {% capture message_example %}
@@ -173,7 +148,7 @@ variables:
 
     {% include snippet.html content=message_large %}
 
-    {% include variables.html %}
+    {% include variables.html type='component' %}
 
   </div>
 </section>
