--- a/docs/documentation/components/tabs.html
+++ b/docs/documentation/components/tabs.html
@@ -2,55 +2,6 @@
 layout: documentation
 doc-tab: components
 doc-subtab: tabs
-variables:
-- name: $tabs-border-bottom-color
-  value: $border
-- name: $tabs-border-bottom-style
-  value: solid
-- name: $tabs-border-bottom-width
-  value: 1px
-- name: $tabs-link-color
-  value: $text
-- name: $tabs-link-hover-border-bottom-color
-  value: $text-strong
-- name: $tabs-link-hover-color
-  value: $text-strong
-- name: $tabs-link-active-border-bottom-color
-  value: $primary
-- name: $tabs-link-active-color
-  value: $primary
-- name: $tabs-link-padding
-  value: 0.5em 1em
-- name: $tabs-boxed-link-radius
-  value: $radius
-- name: $tabs-boxed-link-hover-background-color
-  value: $background
-- name: $tabs-boxed-link-hover-border-bottom-color
-  value: $border
-- name: $tabs-boxed-link-active-background-color
-  value: $white
-- name: $tabs-boxed-link-active-border-color
-  value: $border
-- name: $tabs-boxed-link-active-border-bottom-color
-  value: transparent
-- name: $tabs-toggle-link-border-color
-  value: $border
-- name: $tabs-toggle-link-border-style
-  value: solid
-- name: $tabs-toggle-link-border-width
-  value: 1px
-- name: $tabs-toggle-link-hover-background-color
-  value: $background
-- name: $tabs-toggle-link-hover-border-color
-  value: $border-hover
-- name: $tabs-toggle-link-radius
-  value: $radius
-- name: $tabs-toggle-link-active-background-color
-  value: $primary
-- name: $tabs-toggle-link-active-border-color
-  value: $primary
-- name: $tabs-toggle-link-active-color
-  value: $primary-invert
 ---
 
 {% capture tabs_example %}
@@ -453,7 +404,7 @@ variables:
 
     {% include snippet.html content=tabs_toggle_fullwidth_large_example horizontal=true more=true %}
 
-    {% include variables.html %}
+    {% include variables.html type='component' %}
 
   </div>
 </section>
