--- a/docs/documentation/components/breadcrumb.html
+++ b/docs/documentation/components/breadcrumb.html
@@ -175,7 +175,7 @@ variables:
     {% include anchor.html name="Icons" %}
 
     <div class="content">
-      <p>You can use any of the <a href="http://fortawesome.github.io/Font-Awesome/">Font Awesome</a> <strong>icons</strong>.</p>
+      <p>You can use any of the <a href="http://fontawesome.io/">Font Awesome</a> <strong>icons</strong>.</p>
     </div>
 
     {% include snippet.html content=breadcrumb_icons_example horizontal=true clipped=true %}
