--- a/sass/components/tabs.sass
+++ b/sass/components/tabs.sass
@@ -122,8 +122,14 @@ $tabs-toggle-link-active-color: $link-invert !default
         margin-left: -#{$tabs-toggle-link-border-width}
       &:first-child a
         border-radius: $tabs-toggle-link-radius 0 0 $tabs-toggle-link-radius
+        &.is-rounded
+          border-top-left-radius: $radius-rounded
+          border-bottom-left-radius: $radius-rounded
       &:last-child a
         border-radius: 0 $tabs-toggle-link-radius $tabs-toggle-link-radius 0
+        &.is-rounded
+          border-top-right-radius: $radius-rounded
+          border-bottom-right-radius: $radius-rounded
       &.is-active
         a
           background-color: $tabs-toggle-link-active-background-color
