--- a/sass/elements/button.sass
+++ b/sass/elements/button.sass
@@ -199,3 +199,5 @@ $button-static-border-color: $grey-lighter !default
     color: $button-static-color
     box-shadow: none
     pointer-events: none
+  &.is-rounded
+    border-radius: $radius-rounded
