--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -82,7 +82,7 @@ $tag-delete-margin: 1px !default
     &:active
       background-color: darken($tag-background-color, 10%)
   &.is-rounded
-    border-radius: 290486px
+    border-radius: $radius-rounded
 
 a.tag
   &:hover
