Implement simple version of source tag for module docs

--- a/docs/_includes/meta.html
+++ b/docs/_includes/meta.html
@@ -25,6 +25,15 @@
     </div>
   {% endif %}
 
+  {% if include.module %}
+    <div class="control">
+      <div class="tags has-addons">
+        <span class="tag">Source</span>
+        <span class="tag is-info">{{ include.module }}</span>
+      </div>
+    </div>
+  {% endif %}
+
   <div class="control">
     <div class="tags has-addons">
       <span class="tag">Colors</span>
