--- a/docs/documentation/components/breadcrumb.html
+++ b/docs/documentation/components/breadcrumb.html
@@ -141,6 +141,7 @@ doc-subtab: breadcrumb
       variables=true
       colors=false
       sizes=true
+      module="components/breadcrumb.sass"
     %}
 
     <hr>
