--- a/docs/documentation/layout/hero.html
+++ b/docs/documentation/layout/hero.html
@@ -13,6 +13,11 @@ doc-subtab: hero
     <h2 class="subtitle">
       An imposing <strong>hero banner</strong> to showcase something
     </h2>
+    {%
+      include meta.html
+      module="layout/hero.sass"
+    %}
+
   </div>
 </section>
 
