--- a/docs/documentation/layout/tiles.html
+++ b/docs/documentation/layout/tiles.html
@@ -11,6 +11,10 @@ doc-subtab: tiles
   <div class="container">
     <h1 class="title">Tiles</h1>
     <h2 class="subtitle">A <strong>single tile</strong> element to build 2-dimensional Metro-like, Pinterest-like, or whatever-you-like grids</h2>
+    {%
+      include meta.html
+      module="grid/tiles.sass"
+    %}
 
     <hr>
 
