--- a/docs/documentation/layout/footer.html
+++ b/docs/documentation/layout/footer.html
@@ -27,6 +27,11 @@ doc-subtab: footer
     <h2 class="subtitle">
       A simple responsive <strong>footer</strong> which can include anything: lists, headings, columns, icons, buttons, etc.
     </h2>
+    {%
+      include meta.html
+      module="layout/footer.sass"
+    %}
+
 
     {% include snippet.html content=footer_example horizontal=true more=true %}
 
