--- a/docs/documentation/layout/level.html
+++ b/docs/documentation/layout/level.html
@@ -124,6 +124,11 @@ doc-subtab: level
   <div class="container">
     <h1 class="title">Level</h1>
     <h2 class="subtitle">A multi-purpose <strong>horizontal level</strong>, which can contain almost any other element</h2>
+    {%
+      include meta.html
+      module="components/level.sass"
+    %}
+
 
     <hr>
 
