--- a/docs/documentation/layout/media-object.html
+++ b/docs/documentation/layout/media-object.html
@@ -162,6 +162,10 @@ doc-subtab: media-object
   <div class="container">
     <h1 class="title">Media Object</h1>
     <h2 class="subtitle">The famous <strong>media object</strong> prevalent in social media interfaces, but useful in any context</h2>
+    {%
+      include meta.html
+      module="components/media.sass"
+    %}
 
     <hr>
 
