--- a/docs/documentation/layout/section.html
+++ b/docs/documentation/layout/section.html
@@ -13,6 +13,10 @@ doc-subtab: section
     <h2 class="subtitle">
       A simple container to divide your page into <strong>sections</strong>, like the one you're currently reading
     </h2>
+    {%
+      include meta.html
+      module="layout/section.sass"
+    %}
 
     <hr>
 
