--- a/sass/utilities/derived-variables.sass
+++ b/sass/utilities/derived-variables.sass
@@ -19,7 +19,6 @@ $blue-invert: findColorInvert($blue) !default
 $purple-invert: findColorInvert($purple) !default
 $red-invert: findColorInvert($red) !default
 
-<<<<<<< HEAD
 $primary-invert: findColorInvert($primary) !default
 $info-invert: findColorInvert($blue) !default
 $success-invert: findColorInvert($green) !default
@@ -27,15 +26,6 @@ $warning-invert: findColorInvert($yellow) !default
 $danger-invert: findColorInvert($red) !default
 $light-invert: findColorInvert($dark) !default
 $dark-invert: findColorInvert($light) !default
-=======
-$primary-invert: $turquoise-invert !default
-$info-invert: $cyan-invert !default
-$success-invert: $green-invert !default
-$warning-invert: $yellow-invert !default
-$danger-invert: $red-invert !default
-$light-invert: $dark !default
-$dark-invert: $light !default
->>>>>>> jgthms/master
 
 // General colors
 
@@ -62,7 +52,7 @@ $pre-background: $background !default
 // Link colors
 
 $link: $blue !default
-$link-invert: $blue-invert !default
+$link-invert: findColorInvert($link) !default
 $link-visited: $purple !default
 
 $link-hover: $grey-darker !default
