Adds sup and sub to titles and subtitles

--- a/sass/elements/title.sass
+++ b/sass/elements/title.sass
@@ -28,6 +28,10 @@ $subtitle-strong-weight: $weight-semibold !default
   strong
     color: $title-strong-color
     font-weight: $title-strong-weight
+  sub
+    font-size: calc(#{$title-size} - 50%)
+  sup
+    font-size: calc(#{$title-size} - 50%)
   & + .highlight
     margin-top: -0.75rem
   &:not(.is-spaced) + .subtitle
@@ -37,6 +41,10 @@ $subtitle-strong-weight: $weight-semibold !default
     $i: index($sizes, $size)
     &.is-#{$i}
       font-size: $size
+      sub
+        font-size: calc(#{$size} - 50%)
+      sup
+        font-size: calc(#{$size} - 50%)
 
 .subtitle
   color: $subtitle-color
@@ -46,6 +54,10 @@ $subtitle-strong-weight: $weight-semibold !default
   strong
     color: $subtitle-strong-color
     font-weight: $subtitle-strong-weight
+  sub
+    font-size: calc(#{$subtitle-size} - 50%)
+  sup
+    font-size: calc(#{$subtitle-size} - 50%)
   &:not(.is-spaced) + .title
     margin-top: -1.5rem
   // Sizes
@@ -53,3 +65,7 @@ $subtitle-strong-weight: $weight-semibold !default
     $i: index($sizes, $size)
     &.is-#{$i}
       font-size: $size
+      sub
+        font-size: calc(#{$size} - 50%)
+      sup
+        font-size: calc(#{$size} - 50%)
