Changes sub and sup to 75% and makes them variables

--- a/sass/elements/title.sass
+++ b/sass/elements/title.sass
@@ -3,12 +3,16 @@ $title-size: $size-3 !default
 $title-weight: $weight-semibold !default
 $title-strong-color: inherit !default
 $title-strong-weight: inherit !default
+$title-sub-size: 75% !default
+$title-sup-size: 75% !default
 
 $subtitle-color: $grey-dark !default
 $subtitle-size: $size-5 !default
 $subtitle-weight: $weight-normal !default
 $subtitle-strong-color: $grey-darker !default
 $subtitle-strong-weight: $weight-semibold !default
+$subtitle-sub-size: 75% !default
+$subtitle-sup-size: 75% !default
 
 .title,
 .subtitle
@@ -29,9 +33,9 @@ $subtitle-strong-weight: $weight-semibold !default
     color: $title-strong-color
     font-weight: $title-strong-weight
   sub
-    font-size: calc(#{$title-size} - 50%)
+    font-size: $title-sub-size
   sup
-    font-size: calc(#{$title-size} - 50%)
+    font-size: $title-sup-size
   & + .highlight
     margin-top: -0.75rem
   &:not(.is-spaced) + .subtitle
@@ -41,10 +45,6 @@ $subtitle-strong-weight: $weight-semibold !default
     $i: index($sizes, $size)
     &.is-#{$i}
       font-size: $size
-      sub
-        font-size: calc(#{$size} - 50%)
-      sup
-        font-size: calc(#{$size} - 50%)
 
 .subtitle
   color: $subtitle-color
@@ -55,9 +55,9 @@ $subtitle-strong-weight: $weight-semibold !default
     color: $subtitle-strong-color
     font-weight: $subtitle-strong-weight
   sub
-    font-size: calc(#{$subtitle-size} - 50%)
+    font-size: $subtitle-sub-size
   sup
-    font-size: calc(#{$subtitle-size} - 50%)
+    font-size: $subtitle-sup-size
   &:not(.is-spaced) + .title
     margin-top: -1.5rem
   // Sizes
@@ -65,7 +65,3 @@ $subtitle-strong-weight: $weight-semibold !default
     $i: index($sizes, $size)
     &.is-#{$i}
       font-size: $size
-      sub
-        font-size: calc(#{$size} - 50%)
-      sup
-        font-size: calc(#{$size} - 50%)
