Add navbar fixed classes

--- a/docs/_sass/specific.sass
+++ b/docs/_sass/specific.sass
@@ -53,6 +53,7 @@
   height: 240px
   margin-left: auto
   margin-right: auto
+  overflow: hidden
   position: relative
   text-align: center
   @each $name, $pair in $colors
