--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -1,4 +1,8 @@
-<nav class="navbar {% if include.transparent %}is-transparent{% endif %}">
+<nav class="navbar {% if include.fixed %}is-fixed-top has-shadow{% endif %} {% if include.transparent %}is-transparent{% endif %}">
+  {% if include.has_container %}
+    <div class="container">
+  {% endif %}
+
   <div class="navbar-brand">
     <a class="navbar-item" href="{{ site.url }}">
       <img src="{{ site.url }}/images/bulma-logo.png" alt="{{ site.title }}" width="112" height="28">
@@ -182,4 +186,8 @@
       </div>
     </div>
   </div>
+
+  {% if include.has_container %}
+    </div>
+  {% endif %}
 </nav>
