Add top bottom navbar toggle

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -122,6 +122,9 @@
 {% if page.route == 'index' %}
   <script src="https://player.vimeo.com/api/player.js"></script>
   <script type="text/javascript" src="{{ site.url }}/lib/index.js"></script>
+{% elsif page.doc-subtab == 'navbar' %}
+  {% include examples/navbar-bottom.html %}
+  <script type="text/javascript" src="{{ site.url }}/lib/navbar.js"></script>
 {% endif %}
 
 <div id="fb-root"></div>
