--- a/docs/_layouts/documentation.html
+++ b/docs/_layouts/documentation.html
@@ -3,9 +3,7 @@ layout: default
 route: documentation
 ---
 
-<div class="container">
-  {% include navbar.html id="Documentation" %}
-</div>
+{% include navbar.html id="Documentation" has_container=true %}
 
 <section class="hero is-link">
   <div class="hero-body">
