--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -104,6 +104,8 @@ $navbar-divider-background-color: $border !default
     +navbar-fixed
   &.is-fixed-bottom
     bottom: 0
+    &.has-shadow
+      box-shadow: 0 -2px 3px rgba($black, 0.1)
   &.is-fixed-top
     top: 0
 
@@ -213,6 +215,8 @@ a.navbar-item,
       +navbar-fixed
     &.is-fixed-bottom-touch
       bottom: 0
+      &.has-shadow
+        box-shadow: 0 -2px 3px rgba($black, 0.1)
     &.is-fixed-top-touch
       top: 0
   html.has-navbar-fixed-top-touch
@@ -257,6 +261,16 @@ a.navbar-item,
   .navbar-item
     &.has-dropdown
       align-items: stretch
+    &.has-dropdown-up
+      .navbar-link::after
+        transform: rotate(135deg) translate(0.25em, -0.25em)
+      .navbar-dropdown
+        border-bottom: $navbar-dropdown-border-top
+        border-radius: $navbar-dropdown-radius $navbar-dropdown-radius 0 0
+        border-top: none
+        bottom: 100%
+        box-shadow: 0 -8px 8px rgba($black, 0.1)
+        top: auto
     &.is-active,
     &.is-hoverable:hover
       .navbar-dropdown
@@ -333,6 +347,8 @@ a.navbar-item,
       +navbar-fixed
     &.is-fixed-bottom-desktop
       bottom: 0
+      &.has-shadow
+        box-shadow: 0 -2px 3px rgba($black, 0.1)
     &.is-fixed-top-desktop
       top: 0
   html.has-navbar-fixed-top-desktop
