--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -790,6 +790,9 @@ document.addEventListener('DOMContentLoaded', function () {
           <code>navbar-dropdown</code>
         </li>
       </ul>
+      <p>
+        You can add the modifier class <code>is-expanded</code> to turn it into a full-width element.
+      </p>
     </div>
 
     {% include anchor.html name="Transparent navbar" %}
