--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -157,6 +157,9 @@ a.navbar-link
     max-height: $navbar-item-img-max-height
   &.has-dropdown
     padding: 0
+  &.is-expanded
+    flex-grow: 1
+    flex-shrink: 1
   &.is-tab
     border-bottom: 1px solid transparent
     min-height: $navbar-height
