--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -746,7 +746,7 @@ document.addEventListener('DOMContentLoaded', function () {
       <p>
         A <code>navbar-item</code> is a repeatable element that can be:
       </p>
-      <ul>
+      <ul class="bd-spaced">
         <li>
           a navigation <strong>link</strong>
           {% highlight html %}{{ navbar_item_link_example }}{% endhighlight %}
@@ -810,7 +810,7 @@ document.addEventListener('DOMContentLoaded', function () {
       <p>
         You can now <strong>fix</strong> the navbar to either the <strong>top</strong> or <strong>bottom</strong> of the page. This is a 2-step process:
       </p>
-      <ul>
+      <ul class="bd-spaced">
         <li>
           Add either <code>is-fixed-top</code> or <code>is-fixed-bottom</code> to the <code>navbar</code> component
           {% highlight html %}<nav class="navbar is-fixed-top">{% endhighlight %}
@@ -829,13 +829,13 @@ document.addEventListener('DOMContentLoaded', function () {
         <span class="icon">
           <i class="fa fa-square-o"></i>
         </span>
-        <span>Fix top navbar</span>
+        <span>Fix <strong>top</strong> navbar</span>
       </a>
       <a id="navbarFixBottom" class="button is-link">
         <span class="icon">
           <i class="fa fa-square-o"></i>
         </span>
-        <span>Show bottom navbar</span>
+        <span>Show <strong>bottom</strong> navbar</span>
       </a>
     </div>
 
