Add scroll reveal

--- a/docs/_includes/navbar.html
+++ b/docs/_includes/navbar.html
@@ -1,7 +1,7 @@
-<nav id="navbar" class="navbar {% if include.fixed %}is-fixed-top has-shadow{% endif %} {% if include.transparent %}is-transparent{% endif %}">
-  {% if include.has_container %}
-    <div class="container">
-  {% endif %}
+<nav id="navbar" class="navbar is-fixed-top {% if include.transparent %}is-transparent{% endif %}">
+  <div id="specialShadow" class="bd-special-shadow"></div>
+
+  <div class="container">
 
   <div class="navbar-brand">
     <a class="navbar-item" href="{{ site.url }}">
@@ -20,7 +20,7 @@
       </span>
     </a>
 
-    <div class="navbar-burger burger" data-target="navMenu{{ include.id }}">
+    <div id="navbarBurger" class="navbar-burger burger" data-target="navMenu{{ include.id }}">
       <span></span>
       <span></span>
       <span></span>
@@ -187,7 +187,5 @@
     </div>
   </div>
 
-  {% if include.has_container %}
-    </div>
-  {% endif %}
+  </div>
 </nav>
