--- a/sass/base/minireset.sass
+++ b/sass/base/minireset.sass
@@ -1,4 +1,4 @@
-/*! minireset.css v0.0.2 | MIT License | github.com/jgthms/minireset.css */
+/*! minireset.css v0.0.3 | MIT License | github.com/jgthms/minireset.css */
 // Blocks
 html,
 body,
@@ -52,7 +52,7 @@ html
   box-sizing: border-box
 
 *
-  box-sizing: inherit
+  &,
   &:before,
   &:after
     box-sizing: inherit
@@ -60,9 +60,11 @@ html
 // Media
 img,
 embed,
+iframe,
 object,
 audio,
 video
+  height: auto
   max-width: 100%
 
 // Iframe
