Allow is-active class on <td> and <th> tags

--- a/sass/elements/table.sass
+++ b/sass/elements/table.sass
@@ -44,7 +44,9 @@ $table-striped-row-even-hover-background-color: $white-ter !default
   th
     color: $table-cell-heading-color
     text-align: left
-  tr
+  tr,
+  td,
+  th
     &.is-selected
       background-color: $table-row-active-background-color
       color: $table-row-active-color
