--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -8,6 +8,16 @@ $tag-delete-margin: 1px !default
   display: flex
   flex-wrap: wrap
   justify-content: flex-start
+  &.is-centered
+    justify-content: center
+    .tag
+      margin-right: 0.25rem
+      margin-left: 0.25rem
+  &.is-right
+    justify-content: flex-end
+    .tag
+      margin-left: 0.5rem
+      margin-right: 0
   .tag
     margin-bottom: 0.5rem
     &:not(:last-child)
