--- a/sass/elements/table.sass
+++ b/sass/elements/table.sass
@@ -41,12 +41,16 @@ $table-striped-row-even-hover-background-color: $white-ter !default
     &.is-narrow
       white-space: nowrap
       width: 1%
+    &.is-selected
+      background-color: $table-row-active-background-color
+      color: $table-row-active-color
+      a,
+      strong
+        color: currentColor
   th
     color: $table-cell-heading-color
     text-align: left
-  tr,
-  td,
-  th
+  tr
     &.is-selected
       background-color: $table-row-active-background-color
       color: $table-row-active-color
