more specific margins

--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -33,8 +33,10 @@ $tag-delete-margin: 1px !default
   &.is-right
     justify-content: flex-end
     .tag
-      margin-left: 0.5rem
-      margin-right: 0
+      &:not(:first-child)
+        margin-left: 0.5rem
+      &:not(:last-child)
+        margin-right: 0
 
 .tag:not(body)
   align-items: center
