Add JS cache buster

--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -117,14 +117,14 @@
 </footer>
 
 <script src="{{ site.url }}/vendor/clipboard-1.7.1.min.js"></script>
-<script src="{{ site.url }}/lib/main.js"></script>
+<script src="{{ site.url }}/lib/main.js?v={{ site.time | date: '%Y%m%d%H%M' }}"></script>
 
 {% if page.route == 'index' %}
   <script src="https://player.vimeo.com/api/player.js"></script>
-  <script type="text/javascript" src="{{ site.url }}/lib/index.js"></script>
+  <script type="text/javascript" src="{{ site.url }}/lib/index.js?v={{ site.time | date: '%Y%m%d%H%M' }}"></script>
 {% elsif page.doc-subtab == 'navbar' %}
   {% include examples/navbar-bottom.html %}
-  <script type="text/javascript" src="{{ site.url }}/lib/navbar.js"></script>
+  <script type="text/javascript" src="{{ site.url }}/lib/navbar.js?v={{ site.time | date: '%Y%m%d%H%M' }}"></script>
 {% endif %}
 
 <div id="fb-root"></div>
