--- a/sass/elements/title.sass
+++ b/sass/elements/title.sass
@@ -3,8 +3,8 @@ $title-size: $size-3 !default
 $title-weight: $weight-semibold !default
 $title-strong-color: inherit !default
 $title-strong-weight: inherit !default
-$title-sub-size: 75% !default
-$title-sup-size: 75% !default
+$title-sub-size: 0.75em !default
+$title-sup-size: 0.75em !default
 
 $subtitle-color: $grey-dark !default
 $subtitle-size: $size-5 !default
