--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -522,6 +522,7 @@ $help-size: $size-small !default
       flex-shrink: 1
       &:not(.is-narrow)
         flex-grow: 1
+        flex-basis: 0
       &:not(:last-child)
         margin-right: 0.75rem
 
