Fix navbar-burger sample code in navbar.html
<button> elements with the class combination of button and navbar-burger display with a border. Updating to divs and removing button class

--- a/docs/documentation/components/navbar.html
+++ b/docs/documentation/components/navbar.html
@@ -20,7 +20,7 @@ doc-subtab: navbar
 {% endcapture %}
 
 {% capture navbar_burger_example %}
-<button class="button navbar-burger">
+<div class="navbar-burger">
   <span></span>
   <span></span>
   <span></span>
@@ -34,7 +34,7 @@ doc-subtab: navbar
       <img src="{{ site.url }}/images/bulma-logo.png" alt="{{ site.title }}" width="112" height="28">
     </a>
 
-    <button class="button navbar-burger">
+    <div class="navbar-burger">
       <span></span>
       <span></span>
       <span></span>
@@ -478,7 +478,7 @@ doc-subtab: navbar
 {% endcapture %}
 
 {% capture navbar_js_html %}
-<button class="button navbar-burger" data-target="navMenu">
+<div class="navbar-burger" data-target="navMenu">
   <span></span>
   <span></span>
   <span></span>
