--- a/docs/_includes/footer.html
+++ b/docs/_includes/footer.html
@@ -106,9 +106,9 @@
           <small>
             Get the <a href="{{ site.url }}/made-with-bulma/">badge</a>!
             <br>
-            Source code licensed <a href="http://opensource.org/licenses/mit-license.php">MIT</a>.
+            Source code licensed <a href="https://opensource.org/licenses/mit-license.php">MIT</a>.
             <br>
-            Website content licensed <a rel="license" href="http://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>.
+            Website content licensed <a rel="license" href="https://creativecommons.org/licenses/by-nc-sa/4.0/">CC BY-NC-SA 4.0</a>.
           </small>
         </p>
       </div>
