Fixed notification, input and tag rtl issues

--- a/bulma.sass
+++ b/bulma.sass
@@ -1,5 +1,8 @@
 @charset "utf-8"
 /*! bulma.io v0.6.1 | MIT License | github.com/jgthms/bulma */
+$right: right !default
+$left: left !default
+
 @import "sass/utilities/_all"
 @import "sass/base/_all"
 @import "sass/elements/_all"
