--- a/sass/components/breadcrumb.sass
+++ b/sass/components/breadcrumb.sass
@@ -25,7 +25,7 @@ $breadcrumb-item-separator-color: $text !default
     align-items: center
     display: flex
     &:first-child a
-      padding-left: 0
+      padding-#{$left}: 0
     &.is-active
       a
         color: $breadcrumb-item-active-color
