--- a/sass/components/navbar.sass
+++ b/sass/components/navbar.sass
@@ -346,9 +346,9 @@ a.navbar-link
   .navbar > .container,
   .container > .navbar
     .navbar-brand
-      margin-left: -1rem
+      margin-#{$left}: -1rem
     .navbar-menu
-      margin-right: -1rem
+      margin-#{$right}: -1rem
   // Fixed navbar
   .navbar
     &.is-fixed-bottom-desktop,
