--- a/sass/elements/notification.sass
+++ b/sass/elements/notification.sass
@@ -3,7 +3,7 @@ $notification-radius: $radius !default
 
 $notification-padding: 1.25rem 2.5rem 1.25rem 1.5rem !default
 @if ($right == 'left')
-  $notification-padding: 1.25rem 1.5rem 1.25rem 2.5rem !default
+  $notification-padding: 1.25rem 1.5rem 1.25rem 2.5rem
 
 .notification
   +block
