--- a/sass/elements/tag.sass
+++ b/sass/elements/tag.sass
@@ -11,7 +11,7 @@ $tag-delete-margin: 1px !default
   .tag
     margin-bottom: 0.5rem
     &:not(:last-child)
-      margin-right: 0.5rem
+      margin-#{$right}: 0.5rem
   &:last-child
     margin-bottom: -0.5rem
   &:not(:last-child)
