--- a/bulma-rtl.sass
+++ b/bulma-rtl.sass
@@ -1,6 +1,5 @@
-/*! bulma.io v0.4.0 | MIT License | github.com/jgthms/bulma */
 @charset "utf-8"
-
+/*! bulma.io v0.6.1 | MIT License | github.com/mohammadrafigh/bulma-rtl */
 $right: left
 $left: right
 
