--- a/docs/css/bulma-docs.css
+++ b/docs/css/bulma-docs.css
@@ -5132,6 +5132,16 @@ a.tag:hover {
   font-weight: inherit;
 }
 
+.title sub,
+.subtitle sub {
+  font-size: 0.75em;
+}
+
+.title sup,
+.subtitle sup {
+  font-size: 0.75em;
+}
+
 .title .tag,
 .subtitle .tag {
   vertical-align: middle;
@@ -5637,7 +5647,6 @@ a.tag:hover {
 
 .dropdown-menu {
   display: none;
-  left: 0;
   min-width: 12rem;
   padding-top: 4px;
   position: absolute;
@@ -7968,11 +7977,17 @@ label.panel-block:hover {
 }
 
 .tabs.is-toggle li:first-child a {
-  border-radius: 3px 0 0 3px;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 0;
+  border-bottom-left-radius: 3px;
+  border-bottom-right-radius: 0;
 }
 
 .tabs.is-toggle li:last-child a {
-  border-radius: 0 3px 3px 0;
+  border-top-left-radius: 0;
+  border-top-right-radius: 3px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 3px;
 }
 
 .tabs.is-toggle li.is-active a {
@@ -9750,7 +9765,7 @@ label.panel-block:hover {
   color: #0a0a0a;
 }
 
-.hero.is-white a:not(.button),
+.hero.is-white a:not(.button):not(.dropdown-item):not(.tag),
 .hero.is-white strong {
   color: inherit;
 }
@@ -9828,7 +9843,7 @@ label.panel-block:hover {
   color: white;
 }
 
-.hero.is-black a:not(.button),
+.hero.is-black a:not(.button):not(.dropdown-item):not(.tag),
 .hero.is-black strong {
   color: inherit;
 }
@@ -9906,7 +9921,7 @@ label.panel-block:hover {
   color: #363636;
 }
 
-.hero.is-light a:not(.button),
+.hero.is-light a:not(.button):not(.dropdown-item):not(.tag),
 .hero.is-light strong {
   color: inherit;
 }
@@ -9984,7 +9999,7 @@ label.panel-block:hover {
   color: whitesmoke;
 }
 
-.hero.is-dark a:not(.button),
+.hero.is-dark a:not(.button):not(.dropdown-item):not(.tag),
 .hero.is-dark strong {
   color: inherit;
 }
@@ -10062,7 +10077,7 @@ label.panel-block:hover {
   color: #fff;
 }
 
-.hero.is-primary a:not(.button),
+.hero.is-primary a:not(.button):not(.dropdown-item):not(.tag),
 .hero.is-primary strong {
   color: inherit;
 }
@@ -10140,7 +10155,7 @@ label.panel-block:hover {
   color: #fff;
 }
 
-.hero.is-link a:not(.button),
+.hero.is-link a:not(.button):not(.dropdown-item):not(.tag),
 .hero.is-link strong {
   color: inherit;
 }
@@ -10218,7 +10233,7 @@ label.panel-block:hover {
   color: #fff;
 }
 
-.hero.is-info a:not(.button),
+.hero.is-info a:not(.button):not(.dropdown-item):not(.tag),
 .hero.is-info strong {
   color: inherit;
 }
@@ -10296,7 +10311,7 @@ label.panel-block:hover {
   color: #fff;
 }
 
-.hero.is-success a:not(.button),
+.hero.is-success a:not(.button):not(.dropdown-item):not(.tag),
 .hero.is-success strong {
   color: inherit;
 }
@@ -10374,7 +10389,7 @@ label.panel-block:hover {
   color: rgba(0, 0, 0, 0.7);
 }
 
-.hero.is-warning a:not(.button),
+.hero.is-warning a:not(.button):not(.dropdown-item):not(.tag),
 .hero.is-warning strong {
   color: inherit;
 }
@@ -10452,7 +10467,7 @@ label.panel-block:hover {
   color: #fff;
 }
 
-.hero.is-danger a:not(.button),
+.hero.is-danger a:not(.button):not(.dropdown-item):not(.tag),
 .hero.is-danger strong {
   color: inherit;
 }
@@ -11015,7 +11030,10 @@ svg {
   display: block;
   color: #363636;
   line-height: 20px;
-  padding: 15px 15px 35px 160px;
+  padding-top: 15px;
+  padding-bottom: 35px;
+  padding-right: 15px;
+  padding-left: 160px;
 }
 
 #carbonads .carbon-poweredby {
@@ -11504,7 +11522,10 @@ svg {
   display: -ms-flexbox;
   display: flex;
   height: 30px;
-  margin: 5px 1rem 0 0;
+  margin-top: 5px;
+  margin-bottom: 0;
+  margin-right: 1rem;
+  margin-left: 0;
 }
 
 #sister img {
@@ -12273,7 +12294,10 @@ svg {
 .bd-callout {
   background-color: whitesmoke;
   border-radius: 3px;
-  padding: 1.25rem 2.5rem 1.25rem 1.5rem;
+  padding-top: 1.25rem;
+  padding-bottom: 1.25rem;
+  padding-left: 1.5rem;
+  padding-right: 2.5rem;
   position: relative;
 }
 
