--- a/sass/elements/form.sass
+++ b/sass/elements/form.sass
@@ -70,6 +70,11 @@ $help-size: $size-small !default
   box-shadow: $input-shadow
   max-width: 100%
   width: 100%
+  @if ($right == 'left')
+    &::-webkit-input-placeholder
+      text-align: right !important
+    &::-moz-placeholder
+      text-align: right !important
   &[type="search"]
     border-radius: 290486px
   &[readonly]
