Add Patreon bar

--- a/docs/_sass/footer.sass
+++ b/docs/_sass/footer.sass
@@ -24,6 +24,7 @@
   display: flex
   flex-wrap: wrap
   justify-content: flex-start
+  max-width: 400px
   > iframe,
   > a,
   > form,
@@ -44,6 +45,8 @@
     align-items: center
     display: flex
     width: 130px
+  .bd-patreon-button
+    margin-right: 0.5rem
 
 #newsletter
   .input
