--- a/docs/_sass/patreon.sass
+++ b/docs/_sass/patreon.sass
@@ -9,15 +9,17 @@
     color: currentColor
 
 .bd-patreon-text
-  font-size: $size-small
+  font-size: 0.875rem
   line-height: 1.25
   margin-right: 0.5rem
 
 .bd-patreon-button
   display: inline-block
   flex-shrink: 0
-  height: 30px
-  width: 128px
+  height: 34px
+  width: 145px
+  img
+    max-height: 100%
 
 +from(480px)
   .bd-patreon-text
